--- a/app/src/main/res/drawable/status_chip.xml
+++ b/app/src/main/res/drawable/status_chip.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#FFE6E6"/> <!-- Default soft red -->
+    <solid android:color="#FFFFFF"/> <!-- Default soft red -->
     <corners android:radius="20dp"/>
 </shape>
