--- a/app/src/main/res/layout/activity_glucose_history.xml
+++ b/app/src/main/res/layout/activity_glucose_history.xml
@@ -1,86 +1,117 @@
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".GlucoseHistory">
 
-    <!-- Menu Icon -->
-    <ImageView
-        android:id="@+id/imageView9"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/topMenu"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="74dp"
+        android:layout_marginRight="30dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/menu_icon" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <!-- Title -->
-    <TextView
-        android:id="@+id/textView18"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Track Glucose"
-        android:fontFamily="@font/poppins_medium"
-        android:textSize="16sp"
-        android:layout_marginStart="8dp"
-        app:layout_constraintTop_toTopOf="@id/imageView9"
-        app:layout_constraintBottom_toBottomOf="@id/imageView9"
-        app:layout_constraintStart_toEndOf="@id/imageView9" />
+        <ImageView
+            android:id="@+id/imageView9"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/menu"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/filterButton"
-        style="?android:attr/buttonBarButtonStyle"
-        android:layout_width="140dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="20dp"
-        android:layout_weight="1"
-        android:background="@android:color/white"
-        android:fontFamily="@font/poppins_medium"
-        android:text="Filter by Month"
-        android:textColor="#605C65"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView18" />
+        <TextView
+            android:id="@+id/textView18"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:fontFamily="@font/poppins_bold"
+            android:text="Track Glucose"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView9"
+            app:layout_constraintStart_toEndOf="@+id/imageView9"
+            app:layout_constraintTop_toTopOf="@+id/imageView9" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
-        android:id="@+id/toggle_container"
-        android:layout_width="wrap_content"
-        android:layout_height="34dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="24dp"
-        android:background="@drawable/toggle_unselected"
-        android:gravity="center"
+        android:id="@+id/day_navigation"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="30dp"
         android:orientation="horizontal"
-        android:padding="2dp"
+        android:gravity="center_vertical"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.509"
-        app:layout_constraintStart_toEndOf="@+id/filterButton"
-        app:layout_constraintTop_toBottomOf="@+id/textView18">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/topMenu">
 
-        <TextView
-            android:id="@+id/today_button"
-            android:layout_width="60dp"
-            android:layout_height="match_parent"
-            android:background="@android:color/transparent"
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/filterButton"
+            android:layout_width="0dp"
+            android:layout_height="34dp"
+            android:layout_weight="1"
+            android:layout_marginEnd="30dp"
+            android:background="@drawable/button_stroke_background"
             android:fontFamily="@font/poppins_medium"
-            android:gravity="center"
-            android:text="Today"
-            android:textColor="@android:color/white"
-            android:textSize="12sp" />
+            android:text="Filter by Month"
+            android:textColor="#605C65"
+            android:textAllCaps="false"
+            android:textStyle="normal"
+            android:drawableStart="@drawable/filter"
+            android:drawablePadding="14dp"
+            android:paddingStart="25dp"
+            android:paddingEnd="12dp"
+            android:gravity="center_vertical"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent" />
 
-        <TextView
-            android:id="@+id/history_button"
-            android:layout_width="60dp"
-            android:layout_height="match_parent"
-            android:background="@drawable/toggle_selected"
-            android:fontFamily="@font/poppins_medium"
+        <LinearLayout
+            android:id="@+id/toggle_container"
+            android:layout_width="wrap_content"
+            android:layout_height="34dp"
+            android:orientation="horizontal"
+            android:background="@drawable/toggle_unselected"
+            android:padding="2dp"
             android:gravity="center"
-            android:text="History"
-            android:textColor="@color/white"
-            android:textSize="12sp" />
+            app:layout_constraintTop_toBottomOf="@id/topMenu"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <TextView
+                android:id="@+id/today_button"
+                android:layout_width="60dp"
+                android:layout_height="match_parent"
+                android:background="@android:color/transparent"
+                android:gravity="center"
+                android:text="Today"
+                android:textColor="@android:color/white"
+                android:textSize="12sp"
+                android:fontFamily="@font/poppins_medium" />
+
+            <TextView
+                android:id="@+id/history_button"
+                android:layout_width="60dp"
+                android:layout_height="match_parent"
+                android:background="@drawable/toggle_selected"
+                android:gravity="center"
+                android:text="History"
+                android:textColor="@color/white"
+                android:textSize="12sp"
+                android:fontFamily="@font/poppins_medium" />
+        </LinearLayout>
+
     </LinearLayout>
 
 
@@ -89,15 +120,19 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/glucoseRecyclerView"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:clipToPadding="false"
+        android:overScrollMode="always"
+        android:paddingBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/filterButton" />
-
-
-
-
+        app:layout_constraintTop_toBottomOf="@+id/day_navigation"
+        app:layout_constraintVertical_bias="0.059" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
