no records handling

--- a/app/src/main/res/layout/activity_glucose_history.xml
+++ b/app/src/main/res/layout/activity_glucose_history.xml
@@ -134,5 +134,20 @@
         app:layout_constraintTop_toBottomOf="@+id/day_navigation"
         app:layout_constraintVertical_bias="0.059" />
 
+    <TextView
+        android:id="@+id/noRecordsTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="No records found"
+        android:textSize="16sp"
+        android:textColor="#999999"
+        android:fontFamily="@font/poppins_medium"
+        android:visibility="gone"
+        android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/day_navigation"
+        app:layout_constraintVertical_bias="0.3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
