--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -240,6 +240,47 @@
                     android:textSize="13.5sp" />
             </com.google.android.material.textfield.TextInputLayout>
 
+            <!-- New Birthdate Field -->
+            <TextView
+                android:id="@+id/birthdateLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/poppins_bold"
+                android:text="Birthdate"
+                android:layout_marginTop="16dp"
+                android:layout_marginStart="32dp"
+                android:textColor="@android:color/black"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/currentPasswordInputLayout"/>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/birthdateInputLayout"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="-5dp"
+                android:layout_marginEnd="32dp"
+                app:boxCornerRadiusBottomEnd="16dp"
+                app:boxCornerRadiusBottomStart="16dp"
+                app:boxCornerRadiusTopEnd="16dp"
+                app:boxCornerRadiusTopStart="16dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/birthdateLabel">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/birthdateEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins_light"
+                    android:hint="YYYY-MM-DD"
+                    android:focusable="false"
+                    android:clickable="true"
+                    android:inputType="none"
+                    android:textSize="13.5sp" />
+            </com.google.android.material.textfield.TextInputLayout>
+            <!-- End of New Birthdate Field -->
 
             <Button
                 android:id="@+id/updateButton"
@@ -254,7 +295,7 @@
                 android:backgroundTint="#007BFF"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/currentPasswordInputLayout"/>
+                app:layout_constraintTop_toBottomOf="@+id/birthdateInputLayout"/> 
 
             <LinearLayout
                 android:id="@+id/actionButtonsLayout"
